feat: change binary name to vlt 🔥
why not !!

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -3,6 +3,10 @@ name = "cli"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "vlt"
+path = "src/main.rs"
+
 [dependencies]
 arboard = "3.6.1"
 clap = { version = "4.5.54", features = ["derive"] }
