--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -15,3 +15,5 @@ storage = { workspace = true }
 core = { workspace = true }
 secrecy = "0.10.3"
 rpassword = "7.4.0"
+dialoguer = "0.12.0"
+console = "0.16.2"
