--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,5 @@ members = [ 'crates/cli' , "crates/core", "crates/daemon", "crates/storage"]
 resolver = "3"
 
 [workspace.dependencies]
-core = { path = "./crates/core" }
-storage = { path = "./crates/storage" }
+vlt_crypto = { path = "./crates/core" }
+vlt_store = { path = "./crates/storage" }
