--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -18,3 +18,6 @@ rpassword = "7.4.0"
 dialoguer = "0.12.0"
 console = "0.16.2"
 dirs = "6.0.0"
+
+[target.'cfg(windows)'.dependencies]
+uds_windows = "1.1.0"
